# ftdi-unbind

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  RELEASE.cmd  diagnosis.cmd  diagnosis.ps1  diagnosis.sh  install.sh  signing.metadata.json
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: PI4-TESTRUNNER.md  PUBLISHING-AND-SECRETS.md  SIGNING.md  rpi4-testrunner.md
macos-linux/: README.md  ftdi-bind  ftdi-unbind
packaging/: README.md  update-packaging.sh
packaging/homebrew/: ftdi-unbind.rb
packaging/winget/Compelcon.FtdiUnbind/0.1.0/: Compelcon.FtdiUnbind.installer.yaml  Compelcon.FtdiUnbind.locale.en-US.yaml  Compelcon.FtdiUnbind.version.yaml
scripts/: RELEASE.cmd  build-libwdi.ps1  release-local.ps1  setup-github-oidc.ps1  setup-gitlab-oidc.ps1  sign-local.ps1
windows/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
windows/.claude/: settings.local.json
windows/docs/: BUILD-ENVIRONMENT.md  FTDI-DOCTOR.md  LIBWDI-API.md  RESTORE-STRATEGY.md  SIGNING-AZURE-ARTIFACT.md  SIGNING.md  WINDOWS-DEV-SETTINGS.md
windows/docs/phases/: PHASE-00-build-skeleton.md  PHASE-01-match-core.md  PHASE-02-enumerate-list.md  PHASE-03-install-winusb.md  PHASE-04-restore-vcp.md  PHASE-05-cli-two-exes.md  PHASE-06-release.md
windows/scripts/: add-defender-exclusion.ps1  check-dev-security.ps1  disable-sac.ps1  elevate-here.bat  elevate-here.ps1
windows/src/: args.c  args.h  comdb.c  comdb.h  comdb_win.c  comdb_win.h  doctor_main.c  elevate.c  elevate.h  enum.c  enum.h  install.c  install.h  main.c  match.c  match.h  probe.c  restore.c  restore.h
windows/tests/: test_args.c  test_cli.c  test_comdb.c  test_match.c  test_restore.c
